<resources>
    <string name="app_name">Created By Frederick Fan, David Xiong, Pranav Shukla, Marshal DiGiovanni, and Adrian Adiwijia </string>
    <string name="start">Start Game</string>
    <string name="cookieClickerTitle">Cookie Clicker Title</string>
    <string name="cookieCounterPlaceholderText">Cookie Count: %d</string>
    <string name="cookieClickerCounter">Cookie Count</string>
    <string name="cookieContentDescription">Picture of Clickable Cookie</string>
    <string name="cookiePlaceholderText">Add a Cookie!</string>
    <string name="backButton">Back to Main Menu</string>
    <string name="loginButton">Login</string>
    <string name="signupButton">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="toSignup">To Sign Up</string>
    <string name="toLogin">To Login</string>
    <string name="shop">Shop</string>
    <string name="plus2Text">Plus 2</string>
    <string name="plus3Text">Plus 3</string>
    <string name="costPlus2Text">Cost: 1500 Cookies</string>
    <string name="costPlus3Text">Cost: 3000 Cookies</string>
    <string name="backToCookie">Back to Clicking Cookies</string>
    <string name="leaderBoard">Leaderboard by Wins</string>
    <string name="first">First:</string>
    <string name="second">Second:</string>
    <string name="third">Third:</string>
    <string name="fourth">Fourth:</string>
    <string name="fifth">Fifth:</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="image">image</string>
    <string name="contactinfo">CSE 476 Project - Spring 2024\n\nMarshal DiGiovanni\ndigiov26@msu.edu\n\nAdrian Adiwidjaja\nadiwidj1@msu.edu\n\nPranav Shukla\nshuklapr@msu.edu\n\nFrederick Fan\nfanfrede@msu.edu\n\nDavid Xiong\nxiongdav@msu.edu</string>
    <string name="fifthstring">Fifth:</string>
</resources>