<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textLabelLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton" />

    <Button
        android:id="@+id/switchToSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toSignup" />

    <Button
        android:id="@+id/backToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButton" />
</LinearLayout>
