<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CookieActivity">

    <TextView
        android:id="@+id/cookieClickerTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cookieClickerTitle" />

    <TextView
        android:id="@+id/cookieClickerCounter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cookieClickerCounter" />

    <Button
        android:id="@+id/buttonCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cookiePlaceholderText" />


    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backbutton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:onClick="goBackToMainMenu" />

</LinearLayout>